// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditOrderModal/> should not render when the modal is closed 1`] = `null`;

exports[`<EditOrderModal/> should render a spinner when missing data 1`] = `
<div>
  <div
    data-testid="Modal"
  >
    <div
      class="formHeader"
    >
      <div
        data-testid="ProductSearchInput"
      >
        <div
          data-testid="ProductSearchInput_result"
        >
          Result
        </div>
      </div>
      <div
        data-testid="AddCustomItemPopover"
      >
        <div
          data-testid="AddCustomItemPopover_submit"
        >
          Submit
        </div>
      </div>
    </div>
    <div
      class="container"
    >
      <div
        class="inner"
        style="min-height: 500px;"
      >
        <i
          class="icon-custom icon-circle-o-notch md-spin"
          style="font-size: 40px;"
        />
      </div>
    </div>
    <div
      class="formFooter modal-footer"
    >
      <button
        class="focusable btn btn-secondary"
        tabindex="0"
        type="button"
      >
        Cancel
      </button>
      <button
        class="focusable ml-auto btn btn-primary disabled"
        disabled=""
        tabindex="0"
        type="button"
      >
        Edit order
      </button>
    </div>
  </div>
</div>
`;

exports[`<EditOrderModal/> should render with a default currency if missing from integrations 1`] = `
<div>
  <div
    data-testid="Modal"
  >
    <div
      class="formHeader"
    >
      <div
        data-testid="ProductSearchInput"
      >
        <div
          data-testid="ProductSearchInput_result"
        >
          Result
        </div>
      </div>
      <div
        data-testid="AddCustomItemPopover"
      >
        <div
          data-testid="AddCustomItemPopover_submit"
        >
          Submit
        </div>
      </div>
    </div>
    <div>
      <table
        class="table table table-hover"
      >
        <thead>
          <tr>
            <th>
              Product
            </th>
            <th>
              In stock
            </th>
            <th>
              Item price
            </th>
            <th>
              Qty
            </th>
            <th>
              Item total
            </th>
            <th>
              Remove/Restock
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="container"
            >
              <div
                class="imgContainer"
              >
                <img
                  alt="Alt"
                  class="img"
                />
              </div>
              <div
                class="legend"
              >
                <div>
                  <a
                    class="title"
                    href="https://gorgiastest.myshopify.com/admin/products/8345093387/variants/31128766316567"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Acidulous candy
                  </a>
                </div>
                <div
                  class="subtitle"
                >
                  Red / A
                </div>
                <div
                  class="subtitle"
                >
                  SKU: 
                  11111
                </div>
              </div>
            </td>
            <td
              class="numberCol"
            >
              <span
                class="text-muted"
              >
                N/A
              </span>
            </td>
            <td
              class="numberCol"
            >
              <div
                class="d-flex"
              >
                <div
                  class="d-inline-block text-center"
                >
                  <span>
                    $9.99
                  </span>
                </div>
                <span
                  class="times"
                >
                  x
                </span>
              </div>
            </td>
            <td
              class="quantityCol"
            >
              <input
                class="form-control"
                min="0"
                type="number"
                value="1"
              />
            </td>
            <td
              class="numberCol"
            >
              <div
                class="d-flex"
              >
                <strong
                  class="mt-auto mb-auto mr-auto"
                >
                  <span>
                    $9.99
                  </span>
                </strong>
              </div>
            </td>
            <td
              class="numberCol centered"
            >
              <button
                class="wrapper wrapper ghost ghost destructive medium"
                tabindex="0"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  close
                </i>
              </button>
            </td>
          </tr>
          <tr>
            <td
              class="container"
            >
              <div
                class="imgContainer"
              >
                <img
                  alt="Alt"
                  class="img"
                />
              </div>
              <div
                class="legend"
              >
                <div>
                  <a
                    class="title"
                    href="https://gorgiastest.myshopify.com/admin/products/8345093387/variants/31128766349335"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Acidulous candy
                  </a>
                </div>
                <div
                  class="subtitle"
                >
                  Red / B
                </div>
                <div
                  class="subtitle"
                >
                  SKU: 
                  11111
                </div>
              </div>
            </td>
            <td
              class="numberCol"
            >
              <span
                class="text-muted"
              >
                N/A
              </span>
            </td>
            <td
              class="numberCol"
            >
              <div
                class="d-flex"
              >
                <div
                  class="d-inline-block text-center"
                >
                  <span>
                    $9.99
                  </span>
                </div>
                <span
                  class="times"
                >
                  x
                </span>
              </div>
            </td>
            <td
              class="quantityCol"
            >
              <input
                class="form-control"
                min="0"
                type="number"
                value="4"
              />
            </td>
            <td
              class="numberCol"
            >
              <div
                class="d-flex"
              >
                <strong
                  class="mt-auto mb-auto mr-auto"
                >
                  <span>
                    $39.96
                  </span>
                </strong>
              </div>
            </td>
            <td
              class="numberCol centered"
            >
              <button
                class="wrapper wrapper ghost ghost destructive medium"
                tabindex="0"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  close
                </i>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
      <div
        class="container-fluid"
      >
        <div
          class="row"
        >
          <div
            class="col-12 order-2 col-lg-6 order-lg-1"
          >
            <div
              class="mb-4"
            >
              <h4>
                Reason for edit
              </h4>
              <textarea
                class="form-control"
                placeholder="Add a reason..."
                rows="1"
              />
              <small
                class="form-text text-muted"
              >
                Only you and other staff can see this reason
              </small>
            </div>
            <div
              class="mb-3"
            >
              <label
                class="label label"
                for="checkbox-3"
              >
                <input
                  class="input"
                  id="checkbox-3"
                  name="checkbox-3"
                  type="checkbox"
                />
                Send invoice to customer
              </label>
            </div>
          </div>
          <div
            class="mb-xs-4 col-12 order-1 col-lg-6 order-lg-2"
          >
            <dl
              class="row text-right mb-0"
            >
              <dt
                class="col-7 mb-2 grey"
              >
                Subtotal
              </dt>
              <dd
                class="col-5 mb-2"
              >
                —
              </dd>
              <dt
                class="col-7 mb-2 grey"
              >
                Tax
              </dt>
              <dd
                class="col-5 mb-2"
              >
                —
              </dd>
              <dt
                class="col-7 mb-2"
              >
                Total
              </dt>
              <dd
                class="col-5 mb-2"
              >
                <strong
                  class=""
                >
                  —
                </strong>
              </dd>
              <dt
                class="col-7 mb-2 grey"
              >
                Paid by customer
              </dt>
              <dd
                class="col-5 mb-2"
              >
                <div
                  class="mb-3 form-check"
                >
                  —
                  <small
                    class="form-text text-muted"
                  >
                    No changes have been made
                  </small>
                </div>
              </dd>
              <dt
                class="col-7 mb-2"
              >
                Amount to refund
              </dt>
              <dd
                class="col-5 mb-2"
              >
                <div
                  class="mb-3 form-check"
                >
                  <strong
                    class=""
                  >
                    —
                  </strong>
                </div>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
    <div
      class="formFooter modal-footer"
    >
      <button
        class="focusable btn btn-secondary"
        tabindex="0"
        type="button"
      >
        Cancel
      </button>
      <button
        class="focusable ml-auto btn btn-primary disabled"
        disabled=""
        tabindex="0"
        type="button"
      >
        Edit order
      </button>
    </div>
  </div>
</div>
`;

exports[`<EditOrderModal/> should render with a populated order table when data is populated 1`] = `
<div>
  <div
    data-testid="Modal"
  >
    <div
      class="formHeader"
    >
      <div
        data-testid="ProductSearchInput"
      >
        <div
          data-testid="ProductSearchInput_result"
        >
          Result
        </div>
      </div>
      <div
        data-testid="AddCustomItemPopover"
      >
        <div
          data-testid="AddCustomItemPopover_submit"
        >
          Submit
        </div>
      </div>
    </div>
    <div>
      <table
        class="table table table-hover"
      >
        <thead>
          <tr>
            <th>
              Product
            </th>
            <th>
              In stock
            </th>
            <th>
              Item price
            </th>
            <th>
              Qty
            </th>
            <th>
              Item total
            </th>
            <th>
              Remove/Restock
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="container"
            >
              <div
                class="imgContainer"
              >
                <img
                  alt="Alt"
                  class="img"
                />
              </div>
              <div
                class="legend"
              >
                <div>
                  <a
                    class="title"
                    href="https://gorgiastest.myshopify.com/admin/products/8345093387/variants/31128766316567"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Acidulous candy
                  </a>
                </div>
                <div
                  class="subtitle"
                >
                  Red / A
                </div>
                <div
                  class="subtitle"
                >
                  SKU: 
                  11111
                </div>
              </div>
            </td>
            <td
              class="numberCol"
            >
              <span
                class="text-muted"
              >
                N/A
              </span>
            </td>
            <td
              class="numberCol"
            >
              <div
                class="d-flex"
              >
                <div
                  class="d-inline-block text-center"
                >
                  <span>
                    €9.99
                  </span>
                </div>
                <span
                  class="times"
                >
                  x
                </span>
              </div>
            </td>
            <td
              class="quantityCol"
            >
              <input
                class="form-control"
                min="0"
                type="number"
                value="1"
              />
            </td>
            <td
              class="numberCol"
            >
              <div
                class="d-flex"
              >
                <strong
                  class="mt-auto mb-auto mr-auto"
                >
                  <span>
                    €9.99
                  </span>
                </strong>
              </div>
            </td>
            <td
              class="numberCol centered"
            >
              <button
                class="wrapper wrapper ghost ghost destructive medium"
                tabindex="0"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  close
                </i>
              </button>
            </td>
          </tr>
          <tr>
            <td
              class="container"
            >
              <div
                class="imgContainer"
              >
                <img
                  alt="Alt"
                  class="img"
                />
              </div>
              <div
                class="legend"
              >
                <div>
                  <a
                    class="title"
                    href="https://gorgiastest.myshopify.com/admin/products/8345093387/variants/31128766349335"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Acidulous candy
                  </a>
                </div>
                <div
                  class="subtitle"
                >
                  Red / B
                </div>
                <div
                  class="subtitle"
                >
                  SKU: 
                  11111
                </div>
              </div>
            </td>
            <td
              class="numberCol"
            >
              <span
                class="text-muted"
              >
                N/A
              </span>
            </td>
            <td
              class="numberCol"
            >
              <div
                class="d-flex"
              >
                <div
                  class="d-inline-block text-center"
                >
                  <span>
                    €9.99
                  </span>
                </div>
                <span
                  class="times"
                >
                  x
                </span>
              </div>
            </td>
            <td
              class="quantityCol"
            >
              <input
                class="form-control"
                min="0"
                type="number"
                value="4"
              />
            </td>
            <td
              class="numberCol"
            >
              <div
                class="d-flex"
              >
                <strong
                  class="mt-auto mb-auto mr-auto"
                >
                  <span>
                    €39.96
                  </span>
                </strong>
              </div>
            </td>
            <td
              class="numberCol centered"
            >
              <button
                class="wrapper wrapper ghost ghost destructive medium"
                tabindex="0"
                type="button"
              >
                <i
                  class="material-icons icon"
                >
                  close
                </i>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
      <div
        class="container-fluid"
      >
        <div
          class="row"
        >
          <div
            class="col-12 order-2 col-lg-6 order-lg-1"
          >
            <div
              class="mb-4"
            >
              <h4>
                Reason for edit
              </h4>
              <textarea
                class="form-control"
                placeholder="Add a reason..."
                rows="1"
              />
              <small
                class="form-text text-muted"
              >
                Only you and other staff can see this reason
              </small>
            </div>
            <div
              class="mb-3"
            >
              <label
                class="label label"
                for="checkbox-1"
              >
                <input
                  class="input"
                  id="checkbox-1"
                  name="checkbox-1"
                  type="checkbox"
                />
                Send invoice to customer
              </label>
            </div>
          </div>
          <div
            class="mb-xs-4 col-12 order-1 col-lg-6 order-lg-2"
          >
            <dl
              class="row text-right mb-0"
            >
              <dt
                class="col-7 mb-2 grey"
              >
                Subtotal
              </dt>
              <dd
                class="col-5 mb-2"
              >
                —
              </dd>
              <dt
                class="col-7 mb-2 grey"
              >
                Tax
              </dt>
              <dd
                class="col-5 mb-2"
              >
                —
              </dd>
              <dt
                class="col-7 mb-2"
              >
                Total
              </dt>
              <dd
                class="col-5 mb-2"
              >
                <strong
                  class=""
                >
                  —
                </strong>
              </dd>
              <dt
                class="col-7 mb-2 grey"
              >
                Paid by customer
              </dt>
              <dd
                class="col-5 mb-2"
              >
                <div
                  class="mb-3 form-check"
                >
                  —
                  <small
                    class="form-text text-muted"
                  >
                    No changes have been made
                  </small>
                </div>
              </dd>
              <dt
                class="col-7 mb-2"
              >
                Amount to refund
              </dt>
              <dd
                class="col-5 mb-2"
              >
                <div
                  class="mb-3 form-check"
                >
                  <strong
                    class=""
                  >
                    —
                  </strong>
                </div>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
    <div
      class="formFooter modal-footer"
    >
      <button
        class="focusable btn btn-secondary"
        tabindex="0"
        type="button"
      >
        Cancel
      </button>
      <button
        class="focusable ml-auto btn btn-primary disabled"
        disabled=""
        tabindex="0"
        type="button"
      >
        Edit order
      </button>
    </div>
  </div>
</div>
`;

exports[`<EditOrderModal/> should render with an empty order table when data is empty 1`] = `
<div>
  <div
    data-testid="Modal"
  >
    <div
      class="formHeader"
    >
      <div
        data-testid="ProductSearchInput"
      >
        <div
          data-testid="ProductSearchInput_result"
        >
          Result
        </div>
      </div>
      <div
        data-testid="AddCustomItemPopover"
      >
        <div
          data-testid="AddCustomItemPopover_submit"
        >
          Submit
        </div>
      </div>
    </div>
    <div>
      <table
        class="table table"
      >
        <thead>
          <tr>
            <th>
              Product
            </th>
            <th>
              In stock
            </th>
            <th>
              Item price
            </th>
            <th>
              Qty
            </th>
            <th>
              Item total
            </th>
            <th>
              Remove/Restock
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="text-center text-muted"
              colspan="4"
            >
              <small>
                No items
              </small>
            </td>
          </tr>
        </tbody>
      </table>
      <div
        class="container-fluid"
      >
        <div
          class="row"
        >
          <div
            class="col-12 order-2 col-lg-6 order-lg-1"
          >
            <div
              class="mb-4"
            >
              <h4>
                Reason for edit
              </h4>
              <textarea
                class="form-control"
                placeholder="Add a reason..."
                rows="1"
              />
              <small
                class="form-text text-muted"
              >
                Only you and other staff can see this reason
              </small>
            </div>
            <div
              class="mb-3"
            >
              <label
                class="label label"
                for="checkbox-2"
              >
                <input
                  class="input"
                  id="checkbox-2"
                  name="checkbox-2"
                  type="checkbox"
                />
                Send invoice to customer
              </label>
            </div>
          </div>
          <div
            class="mb-xs-4 col-12 order-1 col-lg-6 order-lg-2"
          >
            <dl
              class="row text-right mb-0"
            >
              <dt
                class="col-7 mb-2 grey"
              >
                Subtotal
              </dt>
              <dd
                class="col-5 mb-2"
              >
                —
              </dd>
              <dt
                class="col-7 mb-2 grey"
              >
                Tax
              </dt>
              <dd
                class="col-5 mb-2"
              >
                —
              </dd>
              <dt
                class="col-7 mb-2"
              >
                Total
              </dt>
              <dd
                class="col-5 mb-2"
              >
                <strong
                  class=""
                >
                  —
                </strong>
              </dd>
              <dt
                class="col-7 mb-2 grey"
              >
                Paid by customer
              </dt>
              <dd
                class="col-5 mb-2"
              >
                <div
                  class="mb-3 form-check"
                >
                  —
                  <small
                    class="form-text text-muted"
                  >
                    No changes have been made
                  </small>
                </div>
              </dd>
              <dt
                class="col-7 mb-2"
              >
                Amount to refund
              </dt>
              <dd
                class="col-5 mb-2"
              >
                <div
                  class="mb-3 form-check"
                >
                  <strong
                    class=""
                  >
                    —
                  </strong>
                </div>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
    <div
      class="formFooter modal-footer"
    >
      <button
        class="focusable btn btn-secondary"
        tabindex="0"
        type="button"
      >
        Cancel
      </button>
      <button
        class="focusable ml-auto btn btn-primary disabled"
        disabled=""
        tabindex="0"
        type="button"
      >
        Edit order
      </button>
    </div>
  </div>
</div>
`;
